manifests/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example
  labels: &labels
    app: example
    part-of: example
spec:
  replicas: 1
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
      - image: reg.amoyel.fr/aamoyel/example:1.0
        name: example
        ports:
        - name: PORTNAME
          containerPort: 9090
        resources:
          limits:
            cpu: 200m
            memory: 400Mi
          requests:
            cpu: 40m
            memory: 20Mi
